# blog

./: .gitignore  .nojekyll  404.html  AGENTS.md  Blog.md  CNAME  CV.md  CV_standalone.html  Dockerfile  LICENSE.md  README.md  _config.yml  about.md  config.yaml  convert-notebooks.py  cv_standalone.html  docker-compose.yaml  index.html  justfile  pyproject.toml  requirements.txt  style_guide.md
_includes/: head.html  sidebar.html
_layouts/: default.html  plain.html  post.html
_posts/: 2016-08-21-Wrap-C++-Class-Using-Cython.md  2016-09-17-Plot-By-Groups.md  2016-10-26-Scientific_Python_Toolbox.md  2016-10-26-The-Scientific-Computing-Toolkit-for-Python.md  2016-12-14-What-is-a-Molecule.md  2018-03-03-Abstract-Linear-Algebra-in-Python.md  2018-03-05-Use-Numba-and-SciPy-for-Fast-Integrals.md
_raw_notebooks/: 2016-12-14-What-is-a-Molecule.ipynb  2018-03-05-Use-Numba-and-SciPy-for-Fast-Integrals.ipynb  ipynb_to_post.py  voronoize.ipynb
_site/: 404.html  Blog.html  CV.html  CV.md  LICENSE.html  about.html  atom.xml  feed.xml  index.html
_utils/: cv_minimizer.py
assets/: main.scss
content/: CV.md  _index.md  cv.md  index.md
data/: profile.toml
docs/: 404.html  index.html  index.xml  sitemap.xml
infra/: .gitignore  Pulumi.dev.yaml.example  Pulumi.yaml  README.md  __main__.py  pyproject.toml
layouts/: index.html
nbconvert/: README.md  convert.py
notebooks/: abstract-linalg.ipynb  abstract-linalg.yml  html-reports.ipynb  html-reports.yml  modern-py-for-sci-1.ipynb  modern-py-for-sci-1.yml  molecule.ipynb  molecule.yml  numba-integrals.yml  scicomp-py.ipynb  (+2 more)
(+119 files in other folders)
